# timeline_plugin_text

./: .gitignore  MIGRATION.md  README.md  client.rs  config.toml.example  flake.nix  server.rs
client/: Cargo.toml  index.html  style.css
client/src/: lib.rs  main.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
