[package]
name = "timeline_plugin_text_client"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "timeline_plugin_text_client"
path = "src/main.rs"

[dependencies]
timeline_plugin_client_sdk = { path = "../../../timeline_plugin_client_sdk" }

leptos = { version = "0.8", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Location"] }

[profile.release]
lto = true
opt-level = "z"
