[package]
name = "timeline_plugin_text_server"
version = "0.2.0"
edition = "2021"

[lib]
name = "timeline_plugin_text_server"
path = "src/lib.rs"

[[bin]]
name = "timeline_plugin_text_server"
path = "src/main.rs"

[dependencies]
timeline_plugin_sdk = { path = "../../../timeline_plugin_sdk" }

rocket = { version = "0.5", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
